// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-app"
/>
`;

exports[`App > single 1`] = `
<div
  class="ant-app"
>
  <div>
    Hello World
  </div>
</div>
`;
